# WinSense

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: App.css  App.tsx  adaptiveTriggers.test.ts  adaptiveTriggers.ts  audio.ts  lighting.test.ts  lighting.ts  mapping.test.ts  mapping.ts  persistence.test.ts  persistence.ts  profileIds.ts  triggers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: controller.rs  lib.rs  main.rs  persisted_state.rs
src-tauri/src/controller/: audio.rs  game_monitor.rs  reports.rs
src/components/calibration/: CalibrationPanel.test.ts  CalibrationPanel.tsx
src/components/mapping/: MappingEditor.tsx
