[package]
name = "winsense"
version = "0.1.0"
description = "WinSense controller utility"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "winsense_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6.5"
vigem-client = "0.1.4"
tauri-plugin-fs = "2.4.5"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"] }

